--- a/views/index.jade
+++ b/views/index.jade
@@ -6,5 +6,7 @@ p login
 	a(href="/login") login 
 p order  
 	a(href="/order") order
+p users  
+	a(href="/users") users
 p logout  
 	a(href="/logout") logout
