add menu item; cleaned up getdata.js

--- a/includes/headermenu.jade
+++ b/includes/headermenu.jade
@@ -6,3 +6,12 @@ a(href='/order') order
 a(href='/history') order history
 |  | 
 a(href='/logout') logout
+|  | admin controls -> | 
+
+a(href='/users') users
+|  | 
+a(href='/menu') menu
+|  | 
+a(href='/menuitem') add menu item
+|  | 
+|inventory
