--- a/views/login.jade
+++ b/views/login.jade
@@ -7,9 +7,9 @@ h2 Login to Plate
 form(action='/login', method='post')
   #login
     label(for=everyauth.password.loginFormFieldName) Login
-    input(type='text', name=everyauth.password.loginFormFieldName, value='ebaizel')
+    input(type='text', name=everyauth.password.loginFormFieldName)
   #password
     label(for=everyauth.password.passwordFormFieldName) Password
-    input(type='password', name=everyauth.password.passwordFormFieldName, value='welcome')
+    input(type='password', name=everyauth.password.passwordFormFieldName)
   #submit
     input(type='submit') Login
