--- a/views/users.jade
+++ b/views/users.jade
@@ -9,7 +9,8 @@ if (users)
 		h4 email #{user.email}
 		h4 login #{user.login}
 		h4 id #{user._id}
-		h4 created #{user._id.generationTime * 1000}
+		h4 created 
+			= new Date(user._id.generationTime * 1000)
 		h4 --
 else
 	p there are no users yet
